
Bug Fixes
---------------------
* GITHUB#11726: Indexing term vectors on large documents could fail due to
  trying to apply a dictionary whose size is greater than the maximum supported
  window size for LZ4. (Adrien Grand)

* GITHUB#11768: Taxonomy and SSDV faceting now correctly breaks ties by preferring smaller ordinal
  values. (Greg Miller)

Optimizations
---------------------
* GITHUB#11738: Optimize MultiTermQueryConstantScoreWrapper when a term is present that matches all
  docs in a segment. (Greg Miller)

* GITHUB#11735: KeywordRepeatFilter + OpenNLPLemmatizer always drops last token of a stream.
  (Luke Kot-Zaniewski)

* GITHUB#11771: KeywordRepeatFilter + OpenNLPLemmatizer sometimes arbitrarily exits token stream.
  (Luke Kot-Zaniewski)

* GITHUB#11803: DrillSidewaysScorer has improved to leverage "advance" instead of "next" where
  possible, and splits out first and second phase checks to delay match confirmation. (Greg Miller)

* GITHUB#11828: Tweak TermInSetQuery "dense" optimization to only require all terms present in a
  given field to match a term (rather than all docs in a segment). This is consistent with
  MultiTermQueryConstantScoreWrapper. (Greg Miller)

Other
---------------------
* LUCENE-10423: Remove usages of System.currentTimeMillis() from tests. (Marios Trivyzas)

* GITHUB#11811: Upgrade google java format to 1.15.0 (Dawid Weiss)

* GITHUB#11834: Upgrade forbiddenapis to version 3.4.  (Uwe Schindler)

======================== Lucene 9.4.0 =======================

API Changes
---------------------
* LUCENE-10577: Add VectorEncoding to enable byte-encoded HNSW vectors (Michael Sokolov, Julie Tibshirani)

New Features
---------------------
* LUCENE-10654: Add new ShapeDocValuesField for LatLonShape and XYShape. (Nick Knize)

* LUCENE-10629: Support match set filtering with a query in MatchingFacetSetCounts. (Stefan Vodita, Shai Erera)

* LUCENE-10633: SortField#setOptimizeSortWithIndexedData and